Purge the remaining Stream usages.